--- a/Form_Style.css
+++ b/Form_Style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     color: #3e3e3e;
-    background-image: url("images/background.png"); 
+    background-image: url("images/creams.png"); 
     background-size: 1500px 800px; 
     background-position: center top;
 }
